<resources>
    <string name="app_name">ShoeStore</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="emailLabel">Email:</string>
    <string name="passwordLabel">Password:</string>
    <string name="register">Register</string>
    <string name="welcome_screen_subtext">Proceed to the next screen for instructions on how to use the Shoe Store app!</string>
    <string name="welcome">Welcome!</string>
    <string name="next">Next</string>
    <string name="instructions_screen_subtext">Proceed to the next screen to be able to scroll through the full list of shoes in your inventory! Select the \'+\' button to add more shoes to your inventory!</string>
    <string name="instructions">Instructions:</string>
    <string name="add_shoe_to_inventory_button">Add shoe to inventory button</string>
    <string name="logout">Logout</string>
    <string name="input_email_address">Input email address</string>
    <string name="input_password">Input password</string>
    <string name="shoe_list_item">%1$s %2$s %3$.1f %4$s</string>
</resources>
